2012-08-30  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed bug #40386: PHP 5.4 Compatibility
	* Fixed bug #40382: Typo in Method getPageTitle prevents pagetitle from being indexed in some cases, credits Dominik Steinborn
	* Fixed a bug where the facet option links did not have the correct target page
	* Fixed a bug where the used facet option links did not have the correct target page

2012-08-29  Ingo Renner  <ingo.renner@dkd.de>

	* Added logging for cases when the relevance view helper can not retrieve a document's score
	* Fixed bug #40034: Typo in TypoScript: searchUsingSpellChekerSuggestion, credits Peter Kraume
	* Fixed bug #39866: HTMLContentExtractor does not remove internal style sheet information, credits Dominik Steinborn
	* Fixed bug #39652: Facet "showEvenWhenEmpty" option not working, credits Michel Tremblay
	* Fixed bug #38039: When initializing the page Index Queue check for existence of mount page target pages

2012-08-27  Ingo Renner  <ingo.renner@dkd.de>

	* Removed tx_solr_Util::utf8Decode(), resolves #40256
	* Removed option to use curl as HTTP transport between TYPO3 and the Solr server, resolves #39493
	* Added option plugin.tx_solr.search.faceting.facetLinkUrlParameters, resolves #40060
	* Added a hook, interface to manipulate plugin command template variables

2012-08-24  Ingo Renner  <ingo.renner@dkd.de>

	* Added interface tx_solr_GarbageCollectorPostProcessor
	* Added interface tx_solr_IndexQueueInitializationPostProcessor

2012-08-23  Ingo Renner  <ingo.renner@dkd.de>

	* Added feature #40058: Date facet renderer (currently not completely implemented)
	* Added feature #40054: Result document score analyzer
	* Added feature #40057: Statistics Writer
	* Added feature #40055: Last Searches

2012-08-22  Ingo Renner  <ingo.renner@dkd.de>

	* Added hierarchical facets
	* Added feature #40056: Frequent searches

2012-08-21  Ingo Renner  <ingo.renner@dkd.de>
