@@ -4,6 +4,7 @@
 	* Fixed bug #40382: Typo in Method getPageTitle prevents pagetitle from being indexed in some cases, credits Dominik Steinborn
 	* Fixed a bug where the facet option links did not have the correct target page
 	* Fixed a bug where the used facet option links did not have the correct target page
+	* Fixed a bug where markers in IF conditions may not have been resolved
 
 2012-08-29  Ingo Renner  <ingo.renner@dkd.de>
 
